# network_disk_project

./: CMakeLists.txt  readme.txt
xcom/: CMakeLists.txt  xcom_task.cpp  xserver_task.cpp  xthread.cpp  xthread_pool.cpp  xtools.cpp
xdisk_gui/: CMakeLists.txt  main.cpp  ui_xdisk_gui.h  xdir_task.cpp  xdir_task.h  xdisk_client.cpp  xdisk_client.h  xdisk_gui.cpp  xdisk_gui.h  xdisk_gui.ui  xdownload_task.cpp  xdownload_task.h  xupload_task.cpp  xupload_task.h
xdisk_server/: CMakeLists.txt  xdisk_server.cpp  xfile_server_task.cpp  xfile_server_task.h
